--- a/Source/View/Main/CatTableViewCell.xib
+++ b/Source/View/Main/CatTableViewCell.xib
@@ -12,32 +12,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="95" id="KGk-i7-Jjw" customClass="CatTableViewCell" customModule="CatFacts" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CatTableViewCell" rowHeight="95" id="KGk-i7-Jjw" customClass="CatTableViewCell" customModule="CatFacts" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="94.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="caZ-pM-wn4">
-                        <rect key="frame" x="16" y="14" width="82" height="70"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="caZ-pM-wn4">
+                        <rect key="frame" x="12" y="12" width="64" height="64"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="64" id="Giu-iL-495"/>
+                            <constraint firstAttribute="height" constant="64" id="MNW-jq-bR9"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRr-X9-9gb">
-                        <rect key="frame" x="106" y="14" width="204" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRr-X9-9gb">
+                        <rect key="frame" x="84" y="25" width="224" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omc-cn-Xqh">
-                        <rect key="frame" x="106" y="57" width="204" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omc-cn-Xqh">
+                        <rect key="frame" x="84" y="50.5" width="224" height="32"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Omc-cn-Xqh" firstAttribute="leading" secondItem="caZ-pM-wn4" secondAttribute="trailing" constant="8" id="1Vu-ae-62Q"/>
+                    <constraint firstItem="caZ-pM-wn4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Ao2-QO-Wau"/>
+                    <constraint firstAttribute="bottom" secondItem="Omc-cn-Xqh" secondAttribute="bottom" constant="12" id="ZBa-x2-o00"/>
+                    <constraint firstItem="qRr-X9-9gb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="Zxt-qa-bSJ"/>
+                    <constraint firstItem="Omc-cn-Xqh" firstAttribute="top" secondItem="qRr-X9-9gb" secondAttribute="bottom" constant="5" id="b2t-i9-9Zf"/>
+                    <constraint firstItem="qRr-X9-9gb" firstAttribute="leading" secondItem="caZ-pM-wn4" secondAttribute="trailing" constant="8" id="eGm-Ju-PGE"/>
+                    <constraint firstAttribute="trailing" secondItem="qRr-X9-9gb" secondAttribute="trailing" constant="12" id="kb3-mn-vp2"/>
+                    <constraint firstAttribute="trailing" secondItem="Omc-cn-Xqh" secondAttribute="trailing" constant="12" id="np1-vy-2pV"/>
+                    <constraint firstItem="caZ-pM-wn4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="v9K-HC-8Cg"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
