--- a/Source/View/Main/CatTableViewCell.xib
+++ b/Source/View/Main/CatTableViewCell.xib
@@ -19,22 +19,22 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="94.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="caZ-pM-wn4">
-                        <rect key="frame" x="12" y="12" width="64" height="64"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="caZ-pM-wn4">
+                        <rect key="frame" x="12" y="12" width="70" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="64" id="Giu-iL-495"/>
-                            <constraint firstAttribute="height" constant="64" id="MNW-jq-bR9"/>
+                            <constraint firstAttribute="width" constant="70" id="Giu-iL-495"/>
+                            <constraint firstAttribute="height" constant="70" id="MNW-jq-bR9"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRr-X9-9gb">
-                        <rect key="frame" x="84" y="25" width="224" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="90" y="25" width="218" height="23"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omc-cn-Xqh">
-                        <rect key="frame" x="84" y="50.5" width="224" height="32"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="90" y="53" width="218" height="21.5"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -42,7 +42,7 @@
                 <constraints>
                     <constraint firstItem="Omc-cn-Xqh" firstAttribute="leading" secondItem="caZ-pM-wn4" secondAttribute="trailing" constant="8" id="1Vu-ae-62Q"/>
                     <constraint firstItem="caZ-pM-wn4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Ao2-QO-Wau"/>
-                    <constraint firstAttribute="bottom" secondItem="Omc-cn-Xqh" secondAttribute="bottom" constant="12" id="ZBa-x2-o00"/>
+                    <constraint firstAttribute="bottom" secondItem="Omc-cn-Xqh" secondAttribute="bottom" constant="20" id="ZBa-x2-o00"/>
                     <constraint firstItem="qRr-X9-9gb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="Zxt-qa-bSJ"/>
                     <constraint firstItem="Omc-cn-Xqh" firstAttribute="top" secondItem="qRr-X9-9gb" secondAttribute="bottom" constant="5" id="b2t-i9-9Zf"/>
                     <constraint firstItem="qRr-X9-9gb" firstAttribute="leading" secondItem="caZ-pM-wn4" secondAttribute="trailing" constant="8" id="eGm-Ju-PGE"/>
