--- a/Source/View/SignIn/SignInViewController.xib
+++ b/Source/View/SignIn/SignInViewController.xib
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignInViewController" customModule="FamilyApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignInViewController" customModule="CatFacts" customModuleProvider="target">
             <connections>
                 <outlet property="emailTextField" destination="GTd-r3-h8s" id="TaH-GT-TzA"/>
+                <outlet property="emailValidOutlet" destination="35e-jR-fhX" id="NZr-iI-jkW"/>
                 <outlet property="passwordTextField" destination="f8C-qN-A0P" id="uI8-pJ-yu3"/>
+                <outlet property="passwordValidOutlet" destination="RoT-WY-kx7" id="f3D-CV-P63"/>
                 <outlet property="signInButton" destination="YwQ-rj-tuV" id="ozy-7g-ZGb"/>
+                <outlet property="stackView" destination="oRx-gf-KO3" id="x3D-mV-vAa"/>
                 <outlet property="view" destination="iN0-l3-epB" id="vIQ-0P-JqW"/>
             </connections>
         </placeholder>
@@ -22,10 +26,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="oRx-gf-KO3">
-                    <rect key="frame" x="30" y="258.5" width="315" height="150"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oRx-gf-KO3">
+                    <rect key="frame" x="30" y="233" width="315" height="201"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GTd-r3-h8s" customClass="CustomTextField" customModule="FamilyApp" customModuleProvider="target">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GTd-r3-h8s" customClass="CustomTextField" customModule="CatFacts" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="315" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="lhX-XK-qkE"/>
@@ -37,8 +41,13 @@
                                 <outlet property="delegate" destination="-1" id="4dd-C8-VjA"/>
                             </connections>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f8C-qN-A0P" customClass="CustomTextField" customModule="FamilyApp" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="55" width="315" height="40"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35e-jR-fhX">
+                            <rect key="frame" x="0.0" y="50" width="315" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f8C-qN-A0P" customClass="CustomTextField" customModule="CatFacts" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="80.5" width="315" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="HdI-k6-beK"/>
                             </constraints>
@@ -49,8 +58,13 @@
                                 <outlet property="delegate" destination="-1" id="gME-Ta-3ap"/>
                             </connections>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YwQ-rj-tuV" customClass="CustomButton" customModule="FamilyApp" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="110" width="315" height="40"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoT-WY-kx7">
+                            <rect key="frame" x="0.0" y="130.5" width="315" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YwQ-rj-tuV" customClass="CustomButton" customModule="CatFacts" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="161" width="315" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="19X-B2-8GI"/>
                             </constraints>
@@ -60,9 +74,13 @@
                     <constraints>
                         <constraint firstItem="YwQ-rj-tuV" firstAttribute="leading" secondItem="oRx-gf-KO3" secondAttribute="leading" id="5ry-Wc-NzY"/>
                         <constraint firstAttribute="trailing" secondItem="f8C-qN-A0P" secondAttribute="trailing" id="9h2-8G-11r"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="RoT-WY-kx7" secondAttribute="trailing" id="F2V-N9-gks"/>
                         <constraint firstAttribute="trailing" secondItem="YwQ-rj-tuV" secondAttribute="trailing" id="LRH-92-oud"/>
+                        <constraint firstItem="RoT-WY-kx7" firstAttribute="leading" secondItem="oRx-gf-KO3" secondAttribute="leadingMargin" id="N0o-B9-S4r"/>
                         <constraint firstItem="f8C-qN-A0P" firstAttribute="leading" secondItem="oRx-gf-KO3" secondAttribute="leading" id="PpM-jj-sCC"/>
                         <constraint firstItem="GTd-r3-h8s" firstAttribute="leading" secondItem="oRx-gf-KO3" secondAttribute="leading" id="Sbk-a4-JVS"/>
+                        <constraint firstItem="35e-jR-fhX" firstAttribute="leading" secondItem="oRx-gf-KO3" secondAttribute="leadingMargin" id="U4m-ir-J2D"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="35e-jR-fhX" secondAttribute="trailing" id="aBR-AW-vUd"/>
                         <constraint firstAttribute="trailing" secondItem="GTd-r3-h8s" secondAttribute="trailing" id="wYq-UY-mdZ"/>
                     </constraints>
                 </stackView>
@@ -75,7 +93,7 @@
                 <constraint firstItem="oRx-gf-KO3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="pr1-mV-R9J"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-324.5" y="-5.5"/>
+            <point key="canvasLocation" x="-325.60000000000002" y="-5.8470764617691158"/>
         </view>
     </objects>
 </document>
